<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hull_simulation</name>
  <version>0.0.0</version>
  <description>A simple hull simulation with keyboard control using Ignition Gazebo.</description>
  <maintainer email="aleksandra.kraeva@students.iaac.net">sashanosense</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>